fix(nav): change layout header nav line-height and $icon-vertical-align for icon text vertical center #INFR-536

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -75,7 +75,7 @@ $link-icon-padding-right: 4px !default;
 $box-shadow: 0 0 24px rgba(0, 0, 0, 0.18) !default;
 
 // icon
-$icon-vertical-align: -0.157em !default;
+$icon-vertical-align: -0.2em !default;
 
 // 扩展
 $font-size-md: 1rem !default; // 16px
